syntax = "proto3";
package exocore.oracle;

import "exocore/oracle/price.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ExocoreNetwork/exocore/x/oracle/types";

message Prices {
  uint64 token_id = 1 [(gogoproto.customname) = "TokenID"]; 
  uint64 next_round_id = 2 [(gogoproto.customname) = "NextRoundID"];
  repeated PriceWithTimeAndRound price_list = 3;
}
